--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
   <p>Your trusted renovation supervisor in North Brabant</p>
 </header>
 
-<section>
+<section><section>
+  <h2>About Me</h2>
+  <p>
+    My name is Kadromaan. I am a renovation supervisor based in North Brabant.
+    I have experience coordinating bathroom renovations, toilet upgrades,
+    and full home renovation projects.
+  </p>
+  <p>
+    I personally supervise all work to ensure quality, clear communication,
+    and reliable results for my clients.
+  </p>
+</section>
   <h2>Our Services</h2>
   <p>
     We connect clients with professional renovation companies for bathrooms,
