--- a/index.html
+++ b/index.html
@@ -10,6 +10,47 @@
 </head>
 <body>
 
+  <!-- Header -->
+  <header class="hero">
+    <h1>Brabant Renovation</h1>
+    <p>Your trusted renovation partner</p>
+  </header>
+
+  <!-- About -->
+  <section class="about">
+    <h2>About Us</h2>
+    <p>
+      We specialize in home renovation, offering high-quality and reliable
+      services with years of experience and attention to detail.
+    </p>
+  </section>
+
+  <!-- Gallery -->
+  <section class="gallery">
+    <h2>Our Work</h2>
+
+    <div class="gallery-grid">
+      <img src="images/work1.jpg" alt="Renovation work 1">
+      <img src="images/work2.jpg" alt="Renovation work 2">
+      <img src="images/work3.jpg" alt="Renovation work 3">
+      <img src="images/work4.jpg" alt="Renovation work 4">
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section class="contact">
+    <h2>Contact Us</h2>
+    <p>Email: info@brabant-renovation.com</p>
+    <p>Phone: +31 000 000 000</p>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>© 2026 Brabant Renovation. All rights reserved.</p>
+  </footer>
+
+</body>
+
 <header>
   <h1>Brabant Renovation</h1>
   <p>Your trusted renovation supervisor in North Brabant</p>
